# stage_ros2

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: camera_wrapper.hpp  position_wrapper.hpp  ranger_wrapper.hpp  robot_wrapper.hpp
src/: stage_ros2.cc
